--- a/src/app/mapping-tree/mapping-tree.component.scss
+++ b/src/app/mapping-tree/mapping-tree.component.scss
@@ -6,6 +6,14 @@
 	background-color: aliceblue;
 }
 
+.padding {
+	width: 24px;
+}
+
 .disabled {
 	color: gray;
+}
+
+.leaf:not(.disabled) {
+	cursor: pointer;
 }
